[metadata]
name = hass-nest-web
version = attr: custom_components.nest_web.__version__.__version__
description = Home Assistant Integration For Nest Thermostats
url = https://github.com/dskrypa/hass-nest-web
project_urls =
    Source = https://github.com/dskrypa/hass-nest-web
long_description = file: readme.rst
long_description_content_type = text/x-rst
author = Doug Skrypa
author_email = dskrypa@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
include_package_data = True
packages = find:
package_dir = = custom_components
python_requires = >3.9
install_requires =
    nest-client @ git+https://github.com/dskrypa/nest-client

[options.packages.find]
where = custom_components

[options.package_data]
nest_web.config = template.cfg

[options.extras_require]
homeassistant =
    homeassistant
